--- a/wep-api-food/appsettings.Development.json
+++ b/wep-api-food/appsettings.Development.json
@@ -2,5 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=1234;Server=localhost;Port=5432;Database=foodDb"
   },
-  "Redis" : "localhost:6379"
+  "GrpcAuth": "http://localhost:5045",
+  "Audience": "http://localhost:5092",
+  "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
+  "Redis": "localhost:6379"
 }
