--- a/wep-api-food/appsettings.json
+++ b/wep-api-food/appsettings.json
@@ -3,5 +3,7 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "Redis" : "my-redis:6379"
+  "Audience": "",
+  "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
+  "Redis": "my-redis:6379"
 }
