ADD: OrdersController, MessageSender

--- a/wep-api-food/appsettings.json
+++ b/wep-api-food/appsettings.json
@@ -5,5 +5,7 @@
   },
   "Audience": "",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
-  "Redis": "my-redis:6379"
+  "Redis": "my-redis:6379",
+  "RabbitMQHost": "",
+  "RabbitMQPort": ""
 }
