--- a/wep-api-food-delivery/appsettings.Development.json
+++ b/wep-api-food-delivery/appsettings.Development.json
@@ -1,3 +1,11 @@
 {
-  "SecretKey": "secretKey12345supermegakeyomgmlgkekers"
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=1234;Server=localhost;Port=5432;Database=foodDeliveryDb"
+  },
+  "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
+  "GrpcAuth": "http://localhost:5045",
+  "Audience": "http://localhost:5147",
+  "RabbitMQHost": "",
+  "RabbitMQPort": "",
+  "Food" :  ""
 }
