--- a/wep-api-food-delivery/appsettings.json
+++ b/wep-api-food-delivery/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "AllowedHosts": "*",
-  "SecretKey": "secretKey12345supermegakeyomgmlgkekers"
+  "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
+  "GrpcAuth": "",
+  "Audience": "",
+  "RabbitMQHost": "",
+  "RabbitMQPort": "",
+  "Food": ""
 }
