--- a/web-api-food-auth/appsettings.json
+++ b/web-api-food-auth/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
-  "Issuer": "",
+  "Issuer": "http://web-api-food-auth:81",
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http1AndHttp2"
