--- a/wep-api-food-delivery/appsettings.json
+++ b/wep-api-food-delivery/appsettings.json
@@ -4,9 +4,9 @@
   },
   "AllowedHosts": "*",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
-  "GrpcAuth": "",
-  "Audience": "",
-  "RabbitMQHost": "",
-  "RabbitMQPort": "",
-  "FoodNotify": ""
+  "GrpcAuth": "http://web-api-food-auth:81",
+  "Audience": "http://web-api-food-delivery:80",
+  "RabbitMQHost": "rabbitmq",
+  "RabbitMQPort": "5672",
+  "FoodNotify": "http://web-api-food:8080/api/pub/Orders/Notify"
 }
