--- a/wep-api-food/appsettings.json
+++ b/wep-api-food/appsettings.json
@@ -3,9 +3,10 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-  "Audience": "",
+  "Audience": "http://web-api-food:80",
+  "GrpcAuth": "http://web-api-food-auth:81",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
-  "Redis": "my-redis:6379",
-  "RabbitMQHost": "",
-  "RabbitMQPort": ""
+  "Redis": "redis:6379",
+  "RabbitMQHost": "rabbitmq",
+  "RabbitMQPort": "5672"
 }
