Add: basic functionality

--- a/web-api-food-auth/appsettings.json
+++ b/web-api-food-auth/appsettings.json
@@ -3,8 +3,11 @@
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
   "Issuer": "http://web-api-food-auth:81",
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http1AndHttp2"
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://web-api-food-auth:81"
+      }
     }
   }
 }
