--- a/wep-api-food-delivery/appsettings.json
+++ b/wep-api-food-delivery/appsettings.json
@@ -2,6 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [ { "Name": "Console" } ]
+  },
   "AllowedHosts": "*",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
   "GrpcAuth": "http://web-api-food-auth:81",
