--- a/wep-api-food/appsettings.json
+++ b/wep-api-food/appsettings.json
@@ -3,6 +3,17 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [ { "Name": "Console" } ]
+  },
   "Audience": "http://web-api-food:80",
   "GrpcAuth": "http://web-api-food-auth:81",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
