FIG: logger bug

--- a/wep-api-food-delivery/appsettings.json
+++ b/wep-api-food-delivery/appsettings.json
@@ -11,7 +11,8 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [ { "Name": "Console" } ]
+    "WriteTo": [ { "Name": "Console" } ],
+    "Enrich": "FromLogContext"
   },
   "AllowedHosts": "*",
   "SecretKey": "secretKey12345supermegakeyomgmlgkekers",
