--- a/wep-api-food/appsettings.json
+++ b/wep-api-food/appsettings.json
@@ -12,7 +12,8 @@
         "System": "Warning"
       }
     },
-    "WriteTo": [ { "Name": "Console" } ]
+    "WriteTo": [ { "Name": "Console" } ],
+    "Enrich": "FromLogContext"
   },
   "Audience": "http://web-api-food:80",
   "GrpcAuth": "http://web-api-food-auth:81",
